--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,9 @@
 	"require": {
 		"php": ">=7.2.0",
 		"able/io": "dev-master",
-		"able/facades": "dev-master",
-		"able/sabre": "dev-master"
+		"able/sabre": "dev-master",
+		"able/minify": "dev-master",
+		"able/facades": "dev-master"
 	},
 	"autoload": {
 		"psr-4": {
