--- a/composer.json
+++ b/composer.json
@@ -1,9 +1,8 @@
 {
 	"name": "able/sabre-standard",
-	"version": "2.0",
 	"type": "library",
 	"keywords": ["phpable", "sabre", "template", "engine", "standard"],
-	"description": "phpABLE template engine standard behavior",
+	"description": "phpABLE SABRE template engine standard behavior",
 	"license": "MIT",
 	"authors": [
 		{
@@ -16,7 +15,7 @@
 		"able/io": "dev-master",
 		"able/sabre": "dev-master",
 		"able/minify": "dev-master",
-		"able/facades": "dev-master"
+		"able/facades": "1.0.*"
 	},
 	"autoload": {
 		"psr-4": {
